--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
+		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -32,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/node": "^22.7.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
@@ -42,7 +44,7 @@
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"globals": "^15.9.0",
 		"postcss": "^8.4.47",
-		"prettier-plugin-sort-imports": "^1.8.6",
+		"prettier-plugin-tailwindcss": "^0.6.8",
 		"tailwindcss": "^3.4.13",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "^8.0.1",
