--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -18,7 +18,8 @@
     "sourceMap": true,                                 // Generate source maps for debugging
     "baseUrl": ".",                                    // Base directory for imports
     "paths": {                                        // Path aliases for modules
-      "@types": ["node_modules/@types"]
+      "@types": ["node_modules/@types"],
+      "@utils": ["src/utils"],
     }
   },
   "include": ["src/**/*.ts"],
