--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,15 @@
 	"main": "src/server.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon"
+		"dev": "nodemon",
+		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
 	},
 	"imports": {
 		"#/*": "./src/*",
 		"#utils": "./src/utils/index.ts"
 	},
 	"dependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"module-alias": "^2.2.3",
@@ -20,6 +22,7 @@
 		"@types/express": "^4.17.21",
 		"@types/node": "^22.5.5",
 		"nodemon": "^3.1.7",
+		"prettier": "^3.3.3",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.2"
 	}
