--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"module-alias": "^2.2.3",
