--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.1",
@@ -37,6 +38,7 @@
 		"tailwind-merge": "^2.5.2",
 		"tailwind-styled-components": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7",
+		"use-query-string": "^2.4.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
