--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,7 +39,8 @@
 		"tailwind-styled-components": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7",
 		"use-query-string": "^2.4.1",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "5.0.0-rc.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
