--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,14 +24,17 @@
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
+		"@react-hookz/web": "^24.0.4",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.0.0",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.446.0",
 		"next-themes": "^0.3.0",
+		"query-string": "^7.0.0",
 		"react": "^18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18.3.1",
@@ -43,13 +46,13 @@
 		"tailwind-merge": "^2.5.2",
 		"tailwind-styled-components": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7",
-		"use-query-string": "^2.4.1",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.0-rc.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/lodash": "^4.17.10",
 		"@types/node": "^22.7.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
