--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
 		"date-fns": "^3.0.0",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.446.0",
+		"mongoose": "^8.7.0",
 		"next-themes": "^0.3.0",
 		"query-string": "^7.0.0",
 		"react": "^18.3.1",
