--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-toggle": "^1.1.0",
@@ -30,6 +31,7 @@
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.446.0",
