--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,8 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
+		"leaflet": "^1.9.4",
+		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.446.0",
 		"mongoose": "^8.7.0",
@@ -42,6 +44,7 @@
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
+		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.26.2",
 		"react-time-picker": "^7.0.0",
 		"shadcn-ui": "^0.9.2",
