--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"module-alias": "^2.2.3",
