--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
 		"@react-hookz/web": "^24.0.4",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
+		"@types/express": "^5.0.0",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -60,6 +61,7 @@
 		"@eslint/js": "^9.9.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/lodash": "^4.17.10",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^22.7.3",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
