--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.685.0",
+		"@aws-sdk/s3-request-presigner": "^3.685.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
