--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,8 @@
 		"@aws-sdk/client-s3": "^3.685.0",
 		"@aws-sdk/s3-request-presigner": "^3.685.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"amadeus": "^11.0.0",
+		"amadeus-ts": "^5.0.1",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
