--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -38,6 +38,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
+		"dotenv": "^16.4.5",
 		"leaflet": "^1.9.4",
 		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
