--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,6 +39,8 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
 		"dotenv": "^16.4.5",
+		"echarts": "^5.5.1",
+		"echarts-for-react": "^3.0.2",
 		"leaflet": "^1.9.4",
 		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
