--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,8 @@
 		"express": "^4.21.0",
 		"module-alias": "^2.2.3",
 		"mongoose": "^8.8.1",
-		"multer": "1.4.5-lts.1"
+		"multer": "1.4.5-lts.1",
+		"stripe": "^17.4.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
@@ -32,6 +33,8 @@
 		"@types/express": "^4.17.21",
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.5.5",
+		"@types/nodemailer": "^6.4.17",
+		"nodemailer": "^6.9.16",
 		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
 		"ts-node": "^10.9.2",
