--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
 		"@dnd-kit/sortable": "^8.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -27,9 +28,12 @@
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@react-hookz/web": "^24.0.4",
+		"@stripe/react-stripe-js": "^3.0.0",
+		"@stripe/stripe-js": "^5.2.0",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
 		"@types/express": "^5.0.0",
@@ -39,6 +43,7 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
 		"dotenv": "^16.4.5",
+		"input-otp": "^1.4.1",
 		"leaflet": "^1.9.4",
 		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
