--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,8 +23,10 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"module-alias": "^2.2.3",
+		"moment": "^2.30.1",
 		"mongoose": "^8.8.1",
 		"multer": "1.4.5-lts.1",
+		"node-cron": "^3.0.3",
 		"nodemailer": "^6.9.16"
 	},
 	"devDependencies": {
