--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
 		"@react-hookz/web": "^24.0.4",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
+		"@testing-library/react": "^16.0.1",
 		"@types/express": "^5.0.0",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
@@ -39,6 +40,7 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
 		"dotenv": "^16.4.5",
+		"jest": "^29.7.0",
 		"leaflet": "^1.9.4",
 		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
@@ -63,7 +65,9 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@testing-library/jest-dom": "^6.6.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/jest": "^29.5.14",
 		"@types/lodash": "^4.17.10",
 		"@types/node": "^22.7.3",
 		"@types/react": "^18.3.3",
