--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -37,6 +37,7 @@
 		"@stripe/stripe-js": "^5.2.0",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
+		"@testing-library/react": "^16.0.1",
 		"@types/express": "^5.0.0",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
@@ -47,6 +48,7 @@
 		"echarts": "^5.5.1",
 		"echarts-for-react": "^3.0.2",
 		"input-otp": "^1.4.1",
+		"jest": "^29.7.0",
 		"leaflet": "^1.9.4",
 		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
@@ -71,7 +73,9 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@testing-library/jest-dom": "^6.6.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/jest": "^29.5.14",
 		"@types/lodash": "^4.17.10",
 		"@types/node": "^22.7.3",
 		"@types/react": "^18.3.3",
