--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
 		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-separator": "^1.1.0",
@@ -32,8 +33,8 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@react-hookz/web": "^24.0.4",
-		"@stripe/stripe-js": "^5.2.0",
 		"@stripe/react-stripe-js": "^3.0.0",
+		"@stripe/stripe-js": "^5.2.0",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
 		"@types/express": "^5.0.0",
@@ -43,9 +44,9 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^3.0.0",
 		"dotenv": "^16.4.5",
-		"input-otp": "^1.4.1",
 		"echarts": "^5.5.1",
 		"echarts-for-react": "^3.0.2",
+		"input-otp": "^1.4.1",
 		"leaflet": "^1.9.4",
 		"leaflet-defaulticon-compatibility": "^0.1.2",
 		"lodash": "^4.17.21",
