--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,9 +23,12 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"module-alias": "^2.2.3",
+		"moment": "^2.30.1",
 		"mongoose": "^8.8.1",
 		"multer": "1.4.5-lts.1",
-		"stripe": "^17.4.0"
+		"stripe": "^17.4.0",
+		"node-cron": "^3.0.3",
+		"nodemailer": "^6.9.16"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
@@ -33,8 +36,8 @@
 		"@types/express": "^4.17.21",
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.5.5",
-		"@types/nodemailer": "^6.4.17",
 		"nodemailer": "^6.9.16",
+		"@types/nodemailer": "^6.4.17",
 		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
 		"ts-node": "^10.9.2",
