--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "src/server.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"dev": "nodemon",
 		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
 	},
@@ -26,20 +26,24 @@
 		"moment": "^2.30.1",
 		"mongoose": "^8.8.1",
 		"multer": "1.4.5-lts.1",
-		"stripe": "^17.4.0",
 		"node-cron": "^3.0.3",
-		"nodemailer": "^6.9.16"
+		"nodemailer": "^6.9.16",
+		"stripe": "^17.4.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.14",
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.5.5",
-		"nodemailer": "^6.9.16",
 		"@types/nodemailer": "^6.4.17",
+		"jest": "^29.7.0",
+		"nodemailer": "^6.9.16",
 		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.2"
 	}
