--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
 		"stripe": "^17.4.0"
 	},
 	"devDependencies": {
+		"@jest/globals": "^29.7.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
@@ -38,6 +39,7 @@
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.5.5",
 		"@types/nodemailer": "^6.4.17",
+		"@types/supertest": "^6.0.2",
 		"jest": "^29.7.0",
 		"nodemailer": "^6.9.16",
 		"nodemon": "^3.1.7",
